# nvim-audio-player

./: Cargo.toml  post_build.rs
src/: audio.rs  errors.rs  lib.rs
