[package]
name = "player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0.40"
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["neovim-nightly"] }
reqwest = { version = "0.11.12", features = [ "blocking" ]}
tokio = {version = "1.28.0", features = [ "sync" ]}
rodio = "0.17.1"
